# terrasentia_gazebo

./: README.md  record_data.py  twist_repeater.py
configs/env_0/: routes_config.json
configs/env_1/: routes_config.json
configs/env_2/: routes_config.json
configs/env_3/: routes_config.json
configs/env_4/: routes_config.json
configs/env_5/: routes_config.json
configs/env_6/: routes_config.json
configs/env_7/: routes_config.json
configs/env_8/: routes_config.json
configs/env_9/: routes_config.json
models/env_0/: model.sdf
models/env_1/: model.sdf
models/env_2/: model.sdf
models/env_3/: model.sdf
models/env_4/: model.sdf
models/env_5/: model.config  model.sdf
models/env_6/: model.sdf
models/env_7/: model.sdf
models/env_8/: model.sdf
models/env_9/: model.sdf
terra_description/: CMakeLists.txt  package.xml
terra_description/config/: general_config.urdf.xacro  sensors_config.urdf.xacro
terra_description/include/: params.h  ros_sensor_bridge_core.h  terra_ros_params.h  terra_sensor_relay.h
terra_description/include/control/: terra_camera_controller.h
terra_description/include/gps/: terra_ros_gps_with_dropout.h
terra_description/include/misc/: terra_sim_battery.h  trajectory_grabber.h
terra_description/include/motion/: terra_encoder.h  terra_ros_imu.h  terra_skid_steering_with_encoder.h
terra_description/models/: base_link.STL  front_camera_gimbal_link.STL  front_camera_link.STL  main_body.STL  strut_link.STL  wheel_link.stl  wheel_link_convex.stl  zed2_mount.STL
terra_description/msg/: FourWD.msg  FullGPS.msg  Motor.msg
terra_description/plugins/: CameraGimbalPlugin.cc  CameraGimbalPlugin.hh  TorsionalSpringPlugin.cc  TorsionalSpringPlugin.hh  terra_encoder.cpp  terra_ros_gps_with_dropout.cpp  terra_ros_imu.cpp  terra_skid_steering_with_encoder.cpp
terra_description/urdf/: depth_cam.xacro  gps-with-periodicnoisebox.urdf.xacro  hokuyo_ust10lx.urdf.xacro  imu_terra_plugin.urdf.xacro  links.urdf.xacro  macros.urdf.xacro  materials.urdf.xacro  sensors.urdf.xacro  terrasentia2022.urdf.xacro  ueye_cp_gige.urdf.xacro  zed2.xacro
terra_gazebo/: CMakeLists.txt  package.xml
terra_gazebo/launch/: autonomy_test_handler.launch  demo_world.launch  record_data.launch  spawn_robot.launch  terra_gazebo.launch  terra_marsyard.launch  world_template.launch
terra_mpc/: CMakeLists.txt  README.md  package.xml
terra_mpc/configs/: mpc.yaml
terra_mpc/scripts/: mpc_node.py  reference_path_publisher.py
terra_mpc/scripts/mpc/: mpc.py
terra_mpc/scripts/utils/: mpc_utils.py
terra_utils/: CMakeLists.txt  package.xml
terra_utils/rviz/: mpc_path_tracking.rviz
terra_utils/scripts/: perception_node_kp.py  random_exploration.py  rowfollow_gt.py  rowswitch.py  simulation_teleporter.py
terra_worlds/: CMakeLists.txt  package.xml
terra_worlds/configs/env_0/: routes_config.json
terra_worlds/configs/env_1/: routes_config.json
terra_worlds/configs/env_2/: routes_config.json
terra_worlds/configs/env_3/: routes_config.json
terra_worlds/configs/env_4/: routes_config.json
terra_worlds/configs/env_5/: routes_config.json
terra_worlds/configs/env_6/: routes_config.json
terra_worlds/configs/env_7/: routes_config.json
terra_worlds/models/ansel_sdf0/: model.config  model.sdf
terra_worlds/models/ansel_sdf1/: model.sdf
terra_worlds/models/ansel_sdf2/: model.sdf
terra_worlds/models/corn_plot_late/: model.sdf
terra_worlds/models/env_0/: model.sdf
terra_worlds/models/env_1/: model.sdf
terra_worlds/models/env_2/: model.sdf
terra_worlds/models/env_3/: model.sdf
terra_worlds/models/env_4/: model.sdf
terra_worlds/models/env_5/: model.sdf
terra_worlds/models/env_6/: model.sdf
terra_worlds/models/env_7/: model.sdf
terra_worlds/models/sorghum_plot/: model.config  model.sdf
terra_worlds/scripts/: create_env_random.py  create_env_random_v1.py  create_env_random_v2.py  generate_plots.py  trajectory_utils.py  trajectory_utils2.py
terra_worlds/sdf/: corn_plot.field  corn_plot.sdf  corn_plot_late.field  corn_plot_late.sdf  env_0.field  env_1.field  env_2.field  env_3.field  env_4.field  env_5.field  env_6.field  env_7.field  sorghum_plot.field
terra_worlds/worlds/: ansel_experiment.world  farm.world  marsyard2022.world  marsyard2022.world.xacro  marsyard_forest.world
